--- a/resources/css/style-focus.css
+++ b/resources/css/style-focus.css
@@ -120,3 +120,24 @@
     text-decoration: none;
     transition: background-color 0.3s ease;
 }
+
+#supprimer {
+    padding: 0.5rem;
+    color: white;
+    margin-right: 0.5rem;
+    border-radius: 0.3rem;
+    font-size: 1.1rem;
+    background-color: #bf0909;
+    border: 2px solid #bf0909;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+#supprimer:hover {
+    color: #bf0909;
+    background-color: white;
+}
+
+#supprimer:active {
+    transform: scale(0.97);
+}
